[tool.poetry]
name = "spiderman"
version = "0.1.0"
description = ""
authors = ["Ye Jun <yejun.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.11.0"
scrapy-playwright = "^0.0.34"
playwright-stealth = "^1.0.6"
scrapy-splash = "^0.9.0"
playwright = "^1.43.0"
python-dotenv = "^1.0.1"
aiofiles = "^23.2.1"
httpx = "^0.27.0"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "gerapy_pyppeteer.*",
    "pyppeteer.*",
    "playwright_stealth.*",
    "scrapy_splash.*",
    "itemloaders.processors.*",
]
ignore_missing_imports = true